Elasticsearch Analytics: Implement a optional backend for Analytics, stored in Elasticsearch
With this update, Cyclotron now has the option of collecting Dashboard analytics either in MongoDB (the default), or Elasticsearch.  Both backends implement a shared API so there is no functional difference between the two.
